exports[`TextSelectorTest Render selectable items 1`] = `
<div>
  <p>
    <select
      onChange={[Function bound onChange]}>
      <option
        value="">
        Select text
      </option>
      <option
        value="some full text">
        One
      </option>
    </select>
  </p>
  <p>
    <button
      onClick={[Function bound onAddClick]}>
      Add new
    </button>
  </p>
</div>
`;

exports[`TextSelectorTest Upload Render input form 1`] = `undefined`;

exports[`TextSelectorTest Upload Returns to select view after cancel 1`] = `
Array [
  <p>
    <select
        onChange={[Function bound onChange]}>
        <option
            value="">
            Select text
        </option>
        <option
            value="some full text">
            One
        </option>
    </select>
</p>,
  <p>
    <button
        onClick={[Function bound onAddClick]}>
        Add new
    </button>
</p>
]
`;
